# distributed_data_processing

./: CMakeLists.txt  README.md
algorithm/: CMakeLists.txt  floyd_mpi.cpp  plot.py
algorithm/cuda/: CMakeLists.txt  Makefile  example_scalar_mult.cu  floyd  floyd.cu
algorithm/mpi/: CMakeLists.txt  Makefile  floyd.cpp
mpi/: 1.cpp  10.cpp  11.cpp  12.cpp  13.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  Makefile
openmp/: 1.cpp  10.cpp  11.cpp  12.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp  CMakeLists.txt  main.cpp
