find_package(OpenMP REQUIRED)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
    set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
endif()

set(PROJECT openmp)

add_executable(${PROJECT}_1 1.cpp)
add_executable(${PROJECT}_2 2.cpp)
add_executable(${PROJECT}_3 3.cpp)
add_executable(${PROJECT}_4 4.cpp)
add_executable(${PROJECT}_5 5.cpp)
add_executable(${PROJECT}_6 6.cpp)
add_executable(${PROJECT}_7 7.cpp)
add_executable(${PROJECT}_8 8.cpp)
add_executable(${PROJECT}_9 9.cpp)
add_executable(${PROJECT}_10 10.cpp)
add_executable(${PROJECT}_11 11.cpp)
add_executable(${PROJECT}_12 12.cpp)